--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
-  <header><title>This is title</title></header>
+  <header><title>vtranduc's portfolio</title></header>
   <body>
-    Hello world
+    <h3>
+      Welcome to my portfolio site!
+    </h3>
+    <p>This portfolio site is undergoing maintainance now.</p>
+    <p>It will be back Saturday, October 11th, 2019 afternoon!</p>
   </body>
 </html>
