--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <header><title>vtranduc's portfolio</title></header>
+  <meta
+    http-equiv="Refresh"
+    content="0; url=https://vtranduc.github.io/portfolio"
+  />
   <body>
     <h3>
       Welcome to my portfolio site!
