updated test sentence

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     </h3>
     <p>This portfolio site is undergoing maintainance now.</p>
     <p>It will be back Saturday, October 12th, 2019 afternoon!</p>
+    <p>Test sentence</p>
   </body>
 </html>
