updated redirect message

--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
     <h3>
       Welcome to my portfolio site!
     </h3>
-    <p>This portfolio site is undergoing maintainance now.</p>
+    <h3>Redirecting to portfolio...</h3>
+    <!-- <p>This portfolio site is undergoing maintainance now.</p>
     <p>It will be back Saturday, October 12th, 2019 afternoon!</p>
-    <p>Test sentence</p>
+    <p>Test sentence</p> -->
+    <!-- <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/WHywRbkmtc0"
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe> -->
+    <a data-layers="1,2,3,4"  data-stack-embed="true" href="https://embed.stackshare.io/stacks/embed/017f3e2bf4300b7d223bf3c2bf2ac4"/>
+    <script
+      async
+      src="https://cdn1.stackshare.io/javascripts/client-code.js"
+      charset="utf-8"
+    ></script>
   </body>
 </html>
